# seline

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  package.xml
config/: ur3_robotiq85.yaml  ur3_robotiq85_rgb.yaml
include/: seline.h
launch/: seline.launch  tf_broadcaster.launch
models/: recenter.py  robotiq85_base_link.pcd  robotiq_85_base_link.pcd  robotiq_85_base_link_fine.pcd  robotiq_85_full.pcd  robotiq_gripper_assembly.stl
results/: ur3_robotiq85.yaml
scripts/: process_data.py  tf_broadcaster.py
src/: seline.cc
srv/: GetEndEffectorOffset.srv
