<?xml version="1.0"?>
<package format="2">
  <name>seline</name>
  <version>0.0.0</version>
  <description>6-DOF eye-hand pose estimation and calibration</description>


  <maintainer email="jmwong@csail.mit.edu">Jay M. Wong</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>transform_conversions</depend>
  <depend>pointcloud_conversions</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rospy</depend>
  <depend>message_generation</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
